test/spec_vectors/exports/ok/module_49.wat
(module (table 0 funcref) (export "a" (table 0)))