test/spec_vectors/exports/fail/module_66.wat
(module (table 0 funcref) (memory 0) (export "a" (table 0)) (export "a" (memory 0)))